<resources>

    <string name="app_name">DB Companion</string>

    <string name="title_station">Station</string>
    <string name="title_coffee">Order coffee</string>
    <string name="title_toilets">Toilets</string>
    <string name="title_alarms">Alarms</string>
    <string name="title_ticket">Ticket</string>

    <string name="sorry">Sorry</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_to_train">Welcome on %s!</string>
    <string name="train_from">From %s</string>
    <string name="train_to">To %s</string>
    <string name="pick_an_action">Pick an action</string>
    <string name="alert_on_exit">Alert on exit</string>
    <string name="toilets">Nearest toilet</string>
    <string name="restaurants_bars"><![CDATA[Restaurants & bars]]></string>
    <string name="attractions">Attractions</string>
    <string name="survey">Survey</string>
    <string name="statistics">Statistics</string>
    <string name="nav_home">Home</string>
    <string name="track_num">Track %s</string>
    <string name="train">Train</string>
    <string name="enter_seat">Enter your seat</string>
    <string name="order_coffee">Order a coffee</string>

    <string name="bottom_sheet_delayed">%d\' delayed</string>
    <string name="bottom_sheet_early">%d\' ahead</string>
    <string name="bottom_sheet_punctual">Punctual</string>
    <string name="line_details_current_stop">Now at %s</string>
    <string name="could_not_recognize_qr">Could not recognize QR-code</string>
    <string name="retry">Retry</string>
    <string name="poi">Point of interest</string>

    <string name="notification_bus_stop_sub_pull">Pull to view next departures</string>
    <string name="notification_expanded_title">Next departures from %1$s</string>

</resources>
