<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/MenuOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/MenuOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?android:actionBarSize"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginTop="@dimen/card_margin"
                card_view:cardBackgroundColor="@color/card_background"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_to_train"
                        android:textColor="@color/text_primary"
                        android:textSize="24sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/divider"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/train_from"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/train_to"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/pick_an_action"
                android:textColor="@color/text_primary"
                android:textSize="16sp"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_access_alarm_white_24dp"
                android:gravity="center_vertical"
                android:text="@string/alert_on_exit"
                android:textColor="@color/text_primary"
                android:textSize="16sp"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_local_bar_white_24dp"
                android:gravity="center_vertical"
                android:text="@string/restaurants_bars"
                android:textColor="@color/text_primary"
                android:textSize="16sp"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_event_seat_white_24dp"
                android:gravity="center_vertical"
                android:text="@string/toilets"
                android:textColor="@color/text_primary"
                android:textSize="16sp"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_account_balance_white_24dp"
                android:gravity="center_vertical"
                android:text="@string/attractions"
                android:textColor="@color/text_primary"
                android:textSize="16sp"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_assessment_white_24dp"
                android:gravity="center_vertical"
                android:text="@string/survey"
                android:textColor="@color/text_primary"
                android:textSize="16sp"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_timeline_white_24dp"
                android:gravity="center_vertical"
                android:text="@string/statistics"
                android:textColor="@color/text_primary"
                android:textSize="16sp"/>


        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/include_nav_drawer"/>

</android.support.v4.widget.DrawerLayout>
